# UPB-ADT-Automata-Tools

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  FSA_ConvertFsaToRg.cpp  FSA_ConvertFsaToRg.hpp  FSA_EquivalenceChecker.cpp  FSA_EquivalenceChecker.hpp  FSA_FSAtoREConverter.cpp  FSA_FSAtoREConverter.hpp  FSA_FiniteStateAutomata.cpp  FSA_FiniteStateAutomata.hpp  FSA_FiniteStateAutomaton.cpp  FSA_FiniteStateAutomaton.hpp  FSA_Group.cpp  FSA_Group.hpp  FSA_GroupElement.cpp  FSA_GroupElement.hpp  FSA_State.cpp  FSA_State.hpp  FSA_StateConverter.cpp  FSA_StateConverter.hpp  FSA_TableFillingMinimiser.cpp  FSA_TableFillingMinimiser.h  FSA_TableFillingMinimizer.cpp  FSA_TableFillingMinimizer.h  FSA_Transition.cpp  FSA_Transition.hpp  FinalStateAutomata.cpp  FinalStateAutomata.hpp  Grammar.cpp  Production.cpp  Präsentation_C++.pptx  README.md  REReader.cpp  REReader.h  REReader.hpp  REReaderWriter.cpp  REReaderWriter.hpp  (+35 more)
Beispieldateien/: CFG-Beispiel1.txt  CFG-convertedGrammar1.txt  CFG-outputBeispiel1.txt  FSA-Beispiel-(a or b)_star.txt  FSA-Beispiel-CopyPaste.txt  FSA-Beispiel-ab*.txt  FSA-Beispiel1.txt  FSA-Beispiel2.txt  FSA-exampleFromMinimisingDocument_TotalFSA.txt  FSA-exampleFromMinimisingDocument_TotalFSA_minimized.txt  FSA_DEAtest.txt  FSA_NEAtest.txt  RE-Beispiel2.txt  RE-Beispiel3.txt
Documentation/: Deckblatt-Original.doc  Dokumentation-v2.odt  Dokumentation.odt
Präsentation/: Äquivalenz.graphml  FSA-RE-Beispiel.graphml  NDA-zu-DFA-2.graphml  NDA-zu-DFA.graphml  Präsentation_C++ V3.ppt  Präsentation_C++.ppt  RE-Objektdiagramm-Baum.graphml  (+1 more)
(+33 files in other folders)
